# Async_homework

./: db.py  docker-compose.yml  pyproject.toml  swapi_async.py  swapi_sync.py
