[tool.poetry]
name = "asyncio-homework"
version = "0.1.0"
description = ""
authors = ["Варов Михаил <8605495@mail.ru>"]
readme = "README.md"
packages = [{include = "asyncio_homework"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^1.4.44"
asyncpg = "^0.27.0"
requests = "^2.28.1"
aiohttp = "^3.8.3"
more-itertools = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
